[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = ""
authors = ["jayone <imdff0803@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zeroam/hypermodern-python"
repository  = "https://github.com/zeroam/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22.0"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
